# rationality-freiburg.de

./: .gitignore  .gitmodules  404.html  CNAME  README.md  config.toml  index.html  index.xml  meetup-generation-prompt.md  sitemap.xml
about/: index.html
categories/: index.html  index.xml
credits/: index.html
css/: custom.css  styles.2fa1df15b347581e582e5e8899cf40bdf7908f76e104ed06eeba4c6443012e8c.css  styles.4fe048222d6e6e524b6510636b00f2cd8ddbe2df0106a15f42ab37b811bbf157.css  styles.baeced492eb2582d3e6020584b01534d6f459240cf2c9f9e2cb1d05030ebbeb6.css  (+1 more)
de/: 404.html  index.html  index.xml  (+1 more)
statistics/: README.md  attendance2024.csv  feedback2024.csv  generate.py  pyproject.toml  referrals2024.csv
statistics/data/: attendance.csv  attendance2024.csv  events_per_person_2024.csv  events_per_person_2025.csv  feedback.csv  newcomer.csv  newcomer_referral.csv  referrals2024.csv  retention_per_referral_type_2024.csv
statistics/ratfr_statistics/: helper.py  parse.py
statistics/scripts/: generate.py  parse.py
statistics/src/ratfr_statistics/: helper.py  parse.py  questions.py
statistics/tests/: conftest.py  test_parse.py
statistics/tests/golden/test_parse/test_generate_attendance_files/: attendance.csv  events_per_person.csv  newcomer.csv
statistics/tests/golden/test_parse/test_generate_feedback_file/: feedback.csv
statistics/tests/testdata/test_parse/test_generate_attendance_files/: attendance-statistics.csv
statistics/tests/testdata/test_parse/test_generate_feedback_file/: Event Feedback (Responses) - DE.csv  Event Feedback (Responses) - EN.csv
(+1056 files in other folders)
