[tool.poetry]
name = "ratfr-statistics"
version = "0.1.0"
description = ""
authors = ["Omar Kohl <omarkohl@posteo.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.1"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
pyyaml = "^6.0.2"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
