[project]
name = "ratfr-statistics"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    {name = "Omar Kohl", email = "omarkohl@posteo.net"},
]
requires-python = "<4.0,>=3.10"
dependencies = [
    "numpy<3.0.0,>=2.2.1",
    "pandas<3.0.0,>=2.2.3",
    "matplotlib<4.0.0,>=3.10.0",
    "pyyaml<7.0.0,>=6.0.2",
    "plotly<6.0.0,>=5.24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff<1.0.0,>=0.8.4",
    "pytest<9.0.0,>=8.3.4",
]

[tool.uv]
default-groups = []
